# python-totolo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  release.sh  requirements-dev.txt
.github/workflows/: coverage-branch.yaml  coverage.yaml  publish.yaml  pytest.yaml  test.yaml
examples/: basics.py
scripts/: release.sh  test.sh
tests/: test_core.py  test_entries.py  test_entry.py  test_impl.py  test_lib.py  test_toset.py  test_totolo.py
tests/data/: collection-reorg.st.txt  cycles1.th.txt  cycles2.th.txt  cycles3.th.txt  dangling-component.st.txt  messy.st.txt  scifi1920-mergelist.xlsx  storyformat.st.txt  storytree.st.txt  to-sample-2023.07.09.st.txt
tests/data/sample-2023.07.23/notes/stories/film/: film-scifi-1920s.st.txt
tests/data/sample-2023.07.23/notes/themes/: primary.th.txt
tests/lib/: test_excel.py  test_files.py  test_logging.py  test_textformat.py
tests/utils/: test_help.py  test_makejson.py  test_makelist.py  test_mergefiles.py  test_mergelist.py  test_validate.py
totolo/: __init__.py  api.py  collection.py  field.py  keyword.py  ontology.py  story.py  theme.py  themeontology.py
totolo/impl/: api.py  core.py  entry.py  field.py  keyword.py  parser.py  to_base.py  to_containers.py  to_dict.py  to_entry.py  to_field.py  to_keyword.py  to_object.py  to_parser.py
totolo/lib/: argparse.py  excel.py  files.py  log.py  textformat.py
totolo/util/: help.py  makejson.py  makelist.py  mergefiles.py  mergelist.py  validate.py
