[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "totolo"
authors = [{ name = "Mikael Onsjö", email = "mikael@odinlake.net" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://www.themeontology.org/"
Documentation = "https://github.com/theme-ontology/theming"
Source = "https://github.com/theme-ontology/python-totolo"

[tool.pylint.BASIC]
good-names = "a,sa"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",         # don't want it
    "missing-class-docstring",          # don't want it
    "missing-function-docstring",       # don't want it
    "too-few-public-methods",           # don't want it
    "too-many-arguments",               # borderline acceptable
    "no-member",                        # pylint gets it wrong
    "unsupported-membership-test",      # pylint gets it wrong
    "not-callable",                     # pylint gets it wrong
    "unsubscriptable-object",           # pylint gets it wrong
    "unsupported-assignment-operation", # pylint gets it wrong
    "unsupported-delete-operation",     # pylint gets it wrong
]
